--- a/src/test/java/resources/config.properties
+++ b/src/test/java/resources/config.properties
@@ -1,4 +1,4 @@
-browser = chrome
+browser = edge
 url = https://opensource-demo.orangehrmlive.com/web/index.php/auth/login
 username = Admin
 password = admin123
